<resources>
    <string name="app_name">ConvertPad</string>
    <string name="background">background</string>
    <string name="enter_value_here">Enter Value Here</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="empty_string" />
    <string name="convert">CONVERT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="invalid_credentials_try_again">⚠ Invalid Credentials, Try again</string>
    <string name="exchange_rate">40000</string>
    <string name="theme">theme</string>
</resources>